# web_scraper

./: .gitignore  README.md  app.py  main.py  pyproject.toml
experiments/: upwork_with_playwrght_search.py
src/configs/: scraping_configs.yaml
src/storage/: base_storage.py  csv_storage.py  sqlite_storage.py
src/web_scraping/: base_scraper.py  models.py  requirements_extractor.py  skill_extractor.py  upwork_scraping.py
src/web_scraping/linkedin/: __init__.py  filters.py  scraper.py
src/web_scraping/upwork/: __init__.py  scraper.py
tests/: conftest.py  test_csv_storage.py  test_linkedin_scraping.py  test_models.py  test_sqlite_storage.py  test_upwork_scraping.py
ui/: analytics_tab.py  jobs_tab.py  scraper_tab.py  shared.py
