[project]
name = "web-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "curl-cffi>=0.14.0",
    "nicegui>=2.0",
    "nodriver>=0.48.1",
    "pandas>=2.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "plotly>=5.0",
    "pywebview>=5.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_scraping", "src/storage"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
